2010-05-30 Homer Xing <homer.xing@gmail.com>

    * Add a preference menuitem to choose default pane.
    * Re-enable Oracle repository.
    * Move language support to Computer Doctor pane.
    * Add Eclipse owner correction in Computer Doctor pane.
    * Fix bug: MPlayer-vod cannot be installed.
    * Fix bug: cannot install software without key.
    * Fix bug: SHA-DA radio cannot be installed.

2010-05-29 MA Yue <velly.empire@gmail.com>

    * Reset GNOME

2010-05-29 QI Chengjie <starboy.qi@gmail.com>

    * Add some eclipse extensions for Fedora
    * Add ESET NOD32
    * Add compression strategy setting
    * Add some GEdit setting
    
2010-05-29 Homer Xing <homer.xing@gmail.com>

    * Move OpenJDK to native_apps
    * Merge Generic_Genome_Browser
    * Ellipsize text end in UbuntuAutoRemovableBox
    * Put UbuntuAutoRemovableBox & UbuntuDeleteUnusedConfigBox in a row
    * Chosen means "will remove" in UbuntuDeleteUnusedConfigBox & UbuntuAutoRemovableBox

2010-05-28 Homer Xing <homer.xing@gmail.com>

    * Support YLMF. YLMF users please upgrade to version 10.05.92

2010-05-23 Devil Wang <wxjeacen@gmail.com>

    * Add a lot of software for Fedora
	
2010-05-23 Homer Xing <homer.xing@gmail.com>

    * Immediately show/hide "quick setup" button.
    * Immediately show/hide icons at the side of software names.

2010-05-23 Ray Chen <chenrano2002@gmail.com>

    * Use "yum clean all" command when clean YUM cache

2010-05-22 HAN Haofu <gtxx3600@gmail.com>

    * Optimize the behaviour of lib.notify()

2010-05-22 Homer Xing <homer.xing@gmail.com>

    * Add button, in order to support "copy to clipboard"

2010-05-21 Homer Xing <homer.xing@gmail.com>

    * Clean up Nautilus thumbnails image cache.
    * Remove unused software configuration.
    * Dynamic pane loading.

2010-05-20 Homer Xing <homer.xing@gmail.com>

    * Detect missing packages in ArchLinux

2010-05-19 Homer Xing <homer.xing@gmail.com>

    * Add SweetHome3D